# mlx-summariser

./: .env.example  .gitignore  README.md  dataset.ipynb  main.py  playground.ipynb  pyproject.toml  setup.sh  test.py
notes/: besTalk.md  paper.md  task.md
src/: base_model.py  inference.py  ppo.py  reward.py  reward_model.py  utils.py
src/pages/: demo.py
